# fast-api-play

./: Dockerfile.local  README.md  docker-compose-local.yml  pyproject.toml
fast_api_playground/: main.py  test_ping.py
script/: format  purge  shell  start  stop  test
