[tool.poetry]
name = "fast-api-playground"
version = "0.1.0"
description = ""
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
